--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             font-weight: 300;
             letter-spacing: 0.1em;
             color: #ffffff;
+            text-decoration: none;
         }
         .nav-logo .te {
             color: #3b82f6;
@@ -218,11 +219,11 @@
 <body>
     <!-- Navigation -->
     <nav class="nav">
-        <div class="nav-logo">SUI<span class="te">TE</span></div>
+        <a href="index.html" class="nav-logo">SUI<span class="te">TE</span></a>
         <div class="nav-links">
-            <a href="#" class="active">Home</a>
-            <a href="#market">Market</a>
-            <a href="#news">News</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="market.html">Market</a>
+            <a href="news.html">News</a>
         </div>
     </nav>
     
