--- a/market.html
+++ b/market.html
@@ -381,7 +381,7 @@
         // Token list with main categories and subcategories
         const tokens = [
             // DeFi - Dex
-            { symbol: 'DEEP', name: 'DeepBook', id: 'deepbook-protocol', category: 'DeFi', subcategories: ['Dex', 'CLOB'] },
+            { symbol: 'DEEP', name: 'DeepBook', id: 'deepbook-2', category: 'DeFi', subcategories: ['Dex', 'CLOB'] },
             { symbol: 'CETUS', name: 'Cetus', id: 'cetus-protocol', category: 'DeFi', subcategories: ['Dex'] },
             { symbol: 'MOM', name: 'Momentum', id: 'momentum-2', category: 'DeFi', subcategories: ['Dex'] },
             { symbol: 'BLUE', name: 'Bluefin', id: 'bluefin', category: 'DeFi', subcategories: ['Dex', 'Trading'] },
