--- a/news.html
+++ b/news.html
@@ -448,13 +448,19 @@
             }
         ];
         
-        // Ecosystem project blogs/feeds
+        // Ecosystem project blogs/feeds - Core projects only
         const projectFeeds = [
             {
                 name: 'DeepBook',
-                url: 'https://deepbook.tech/blog/rss.xml', // May need adjustment
+                url: 'https://deepbook.tech/blog/rss.xml',
                 twitter: 'DeepBookonSui',
-                keywords: ['deepbook', 'deep', 'clob']
+                keywords: ['deepbook']
+            },
+            {
+                name: 'Bluefin',
+                url: null,
+                twitter: 'bluefinapp',
+                keywords: ['bluefin']
             },
             {
                 name: 'Cetus',
@@ -463,67 +469,25 @@
                 keywords: ['cetus']
             },
             {
-                name: 'Navi Protocol',
-                url: null,
-                twitter: 'naviprotocol',
-                keywords: ['navi', 'navx']
-            },
-            {
-                name: 'Scallop',
-                url: null,
-                twitter: 'Scallop_io',
-                keywords: ['scallop', 'sca']
-            },
-            {
-                name: 'Bluefin',
-                url: null,
-                twitter: 'bluefinapp',
-                keywords: ['bluefin', 'blue']
-            },
-            {
-                name: 'Bucket Protocol',
-                url: null,
-                twitter: 'bucket_protocol',
-                keywords: ['bucket', 'buck']
-            },
-            {
                 name: 'Suilend',
                 url: null,
                 twitter: 'suilendprotocol',
-                keywords: ['suilend', 'send']
+                keywords: ['suilend']
             },
             {
-                name: 'AlphaFi',
+                name: 'Bucket',
                 url: null,
-                twitter: 'AlphaFi_xyz',
-                keywords: ['alphafi', 'alpha']
-            },
-            {
-                name: 'Haedal',
-                url: null,
-                twitter: 'HaedalProtocol',
-                keywords: ['haedal', 'hae']
+                twitter: 'bucket_protocol',
+                keywords: ['bucket']
             },
             {
                 name: 'Walrus',
                 url: null,
                 twitter: 'WalrusProtocol',
-                keywords: ['walrus', 'wal']
+                keywords: ['walrus']
             },
             {
-                name: 'SuiNS',
-                url: null,
-                twitter: 'SuiNS_',
-                keywords: ['suins', 'ns']
-            },
-            {
-                name: 'Momentum',
-                url: null,
-                twitter: 'MomentumSafe',
-                keywords: ['momentum', 'mom']
-            },
-            {
-                name: 'Ika Protocol',
+                name: 'Ika',
                 url: null,
                 twitter: 'IkaProtocol',
                 keywords: ['ika']
