--- a/news.html
+++ b/news.html
@@ -431,6 +431,13 @@
                             <span class="social-name">Cetus</span>
                             <span class="social-platform">@CetusProtocol</span>
                         </a>
+                        <a href="https://twitter.com/MMTFinance" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">MO</span>
+                            </div>
+                            <span class="social-name">Momentum</span>
+                            <span class="social-platform">@MMTFinance</span>
+                        </a>
                         <a href="https://twitter.com/bluefinapp" target="_blank" class="social-link">
                             <div class="social-icon">
                                 <span class="social-icon-fallback">BL</span>
@@ -438,12 +445,40 @@
                             <span class="social-name">Bluefin</span>
                             <span class="social-platform">@bluefinapp</span>
                         </a>
+                        <a href="https://twitter.com/Scallop_io" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">SC</span>
+                            </div>
+                            <span class="social-name">Scallop</span>
+                            <span class="social-platform">@Scallop_io</span>
+                        </a>
+                        <a href="https://twitter.com/navi_protocol" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">NA</span>
+                            </div>
+                            <span class="social-name">Navi</span>
+                            <span class="social-platform">@navi_protocol</span>
+                        </a>
                         <a href="https://twitter.com/suilendprotocol" target="_blank" class="social-link">
                             <div class="social-icon">
                                 <span class="social-icon-fallback">SU</span>
                             </div>
                             <span class="social-name">Suilend</span>
                             <span class="social-platform">@suilendprotocol</span>
+                        </a>
+                        <a href="https://twitter.com/AlphaFiSUI" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">AL</span>
+                            </div>
+                            <span class="social-name">AlphaFi</span>
+                            <span class="social-platform">@AlphaFiSUI</span>
+                        </a>
+                        <a href="https://twitter.com/HaedalProtocol" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">HA</span>
+                            </div>
+                            <span class="social-name">Haedal</span>
+                            <span class="social-platform">@HaedalProtocol</span>
                         </a>
                         <a href="https://twitter.com/bucket_protocol" target="_blank" class="social-link">
                             <div class="social-icon">
@@ -472,6 +507,48 @@
                             </div>
                             <span class="social-name">Ika</span>
                             <span class="social-platform">@IkaProtocol</span>
+                        </a>
+                        <a href="https://twitter.com/SuiNSdapp" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">NS</span>
+                            </div>
+                            <span class="social-name">SuiNS</span>
+                            <span class="social-platform">@SuiNSdapp</span>
+                        </a>
+                    </div>
+                </div>
+                
+                <!-- Other -->
+                <div class="social-category">
+                    <h3 class="social-category-title">Other</h3>
+                    <div class="social-links">
+                        <a href="https://twitter.com/AlkimiExchange" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">AK</span>
+                            </div>
+                            <span class="social-name">Alkimi</span>
+                            <span class="social-platform">@AlkimiExchange</span>
+                        </a>
+                        <a href="https://twitter.com/doubleup_app" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">DB</span>
+                            </div>
+                            <span class="social-name">DoubleUp</span>
+                            <span class="social-platform">@doubleup_app</span>
+                        </a>
+                        <a href="https://twitter.com/lofitheyeti" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">LO</span>
+                            </div>
+                            <span class="social-name">Lofi</span>
+                            <span class="social-platform">@lofitheyeti</span>
+                        </a>
+                        <a href="https://twitter.com/manifestsui" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">MN</span>
+                            </div>
+                            <span class="social-name">Manifest</span>
+                            <span class="social-platform">@manifestsui</span>
                         </a>
                     </div>
                 </div>
