--- a/news.html
+++ b/news.html
@@ -522,6 +522,27 @@
                 <div class="social-category">
                     <h3 class="social-category-title">Other</h3>
                     <div class="social-links">
+                        <a href="https://twitter.com/xMoney_com" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">XM</span>
+                            </div>
+                            <span class="social-name">xMoney</span>
+                            <span class="social-platform">@xMoney_com</span>
+                        </a>
+                        <a href="https://twitter.com/DeLoreanlabs" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">DM</span>
+                            </div>
+                            <span class="social-name">Delorean</span>
+                            <span class="social-platform">@DeLoreanlabs</span>
+                        </a>
+                        <a href="https://twitter.com/faithdotgg" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">FA</span>
+                            </div>
+                            <span class="social-name">Faith</span>
+                            <span class="social-platform">@faithdotgg</span>
+                        </a>
                         <a href="https://twitter.com/AlkimiExchange" target="_blank" class="social-link">
                             <div class="social-icon">
                                 <span class="social-icon-fallback">AK</span>
