--- a/news.html
+++ b/news.html
@@ -539,9 +539,9 @@
                     </div>
                 </div>
                 
-                <!-- Game -->
+                <!-- Gaming -->
                 <div class="social-category">
-                    <h3 class="social-category-title">Game</h3>
+                    <h3 class="social-category-title">Gaming</h3>
                     <div class="social-links">
                         <a href="https://twitter.com/faithdotgg" target="_blank" class="social-link">
                             <div class="social-icon">
@@ -549,6 +549,13 @@
                             </div>
                             <span class="social-name">Faith</span>
                             <span class="social-platform">@faithdotgg</span>
+                        </a>
+                        <a href="https://twitter.com/overtake_world" target="_blank" class="social-link">
+                            <div class="social-icon">
+                                <span class="social-icon-fallback">OT</span>
+                            </div>
+                            <span class="social-name">Overtake</span>
+                            <span class="social-platform">@overtake_world</span>
                         </a>
                     </div>
                 </div>
