--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="market.html">Market</a>
             <a href="news.html">News</a>
+            <a href="analytics.html">Analytics</a>
         </div>
     </nav>
     
