--- a/market.html
+++ b/market.html
@@ -363,6 +363,7 @@
             <a href="index.html">Home</a>
             <a href="market.html" class="active">Market</a>
             <a href="news.html">News</a>
+            <a href="analytics.html">Analytics</a>
         </div>
     </nav>
     
