--- a/news.html
+++ b/news.html
@@ -362,6 +362,7 @@
             <a href="index.html">Home</a>
             <a href="market.html">Market</a>
             <a href="news.html" class="active">News</a>
+            <a href="analytics.html">Analytics</a>
         </div>
     </nav>
     
