--- a/analytics.html
+++ b/analytics.html
@@ -633,7 +633,7 @@
     <div class="container">
         <div class="page-header">
             <h1 class="page-title">Portfolio Analytics</h1>
-            <p class="page-subtitle">Track your SUI ecosystem holdings · Read-only · Completely safe</p>
+            <p class="page-subtitle">Track your spot holdings · Paste wallet address</p>
         </div>
         
         <!-- Error Message -->
